--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         class="trybewarts-header-logo"
         alt="trybewarts logo"
       />
+      <form action="" class="trybewarts-login">
+        <input type="email" name="email" id="email-header" placeholder="Email">
+        <input type="password" name="password" id="senha-header" placeholder="Senha">
+        <button type="submit" id='botao-header'>Entrar</button>
+      </form>
     </header>
   </body>
   <script src="script.js"></script>
