--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
         class="trybewarts-header-logo"
         alt="trybewarts logo"
       />
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
       <form action="" class="trybewarts-login">
         <input type="email" name="email" id="email-header" placeholder="Email">
         <input type="password" name="password" id="senha-header" placeholder="Senha">
         <button type="submit" id='botao-header'>Entrar</button>
       </form>
     </header>
+    <main>
+        <form action="" id="evaluation-form">
+            <input type="text" id="input-name" placeholder="Nome">
+            <input type="text" id="input-lastname" placeholder="Sobrenome">
+            <input type="text" id="input-email" placeholder="Email">
+        </form>
+        <img src="images/trybewarts-colored.svg" alt="trybe wards forms logo" id="trybewarts-forms-logo">
+    </main>
   </body>
   <script src="script.js"></script>
 </html>
