--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
     </header>
     <main>
         <form action="" id="evaluation-form">
-            <input type="text" id="input-name" placeholder="Nome">
-            <input type="text" id="input-lastname" placeholder="Sobrenome">
+            <div>
+                <input type="text" id="input-name" placeholder="Nome">
+                <input type="text" id="input-lastname" placeholder="Sobrenome">
+            </div>
             <input type="text" id="input-email" placeholder="Email">
+            <select name="" id="house">
+                <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+                <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+                <option value="Corvinode" id="corvinode-house">Corvinode</option>
+                <option value="Pytherina" id="pytherina-house">Pytherina</option>
+            </select>
         </form>
         <img src="images/trybewarts-colored.svg" alt="trybe wards forms logo" id="trybewarts-forms-logo">
     </main>
