--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
         <div id="div3">
           <label for="" id="label-family">Qual sua família?</label>
-          <label for="Frontend"> <input type="radio" name="family" id="Frontend" /> Familía Frontend </label>
-          <label for="Backend"> <input type="radio" name="family" id="Backend" /> Familía Backend </label>
-          <label for="FullStack"> <input type="radio" name="family" id="FullStack" /> Familía FullStack </label>
+          <label for="Frontend"> <input type="radio" name="family" id="Frontend" value="Frontend"/> Familía Frontend </label>
+          <label for="Backend"> <input type="radio" name="family" id="Backend" value="Backend" /> Familía Backend </label>
+          <label for="FullStack"> <input type="radio" name="family" id="FullStack" value="FullStack" /> Familía FullStack </label>
         </div>
       </form>
       <img
