--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
           <input type="radio" name="rate" value="9">9
           <input type="radio" name="rate" value="10">10
         </div>
+        <div id="div6">
+          <label for="" class="textarea">Deixe seu comentário:</label>
+          <textarea name="" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+        </div>
+        <div id="7">
+          <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="" id="agreement">
+        </div>
       </form>
       <img
       src="images/trybewarts-colored.svg"
