--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="" id="agreement">
         </div>
+        <button type="submit" id="submit-btn">Enviar</button>
       </form>
       <img
       src="images/trybewarts-colored.svg"
