--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </div>
         <div id="div4">
           <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
-          <input type="checkbox" name="" id="" class="subject" value="HoFs"> HoFs
-          <input type="checkbox" name="" id="" class="subject" value="Jest"> Jest
-          <input type="checkbox" name="" id="" class="subject" value="Promises"> Promises
-          <input type="checkbox" name="" id="" class="subject" value="React"> React
-          <input type="checkbox" name="" id="" class="subject" value="SQL"> SQL
-          <input type="checkbox" name="" id="" class="subject" value="Python"> Python
+          <input type="checkbox" name="" class="subject" value="HoFs"> HoFs
+          <input type="checkbox" name="" class="subject" value="Jest"> Jest
+          <input type="checkbox" name="" class="subject" value="Promises"> Promises
+          <input type="checkbox" name="" class="subject" value="React"> React
+          <input type="checkbox" name="" class="subject" value="SQL"> SQL
+          <input type="checkbox" name="" class="subject" value="Python"> Python
         </div>
         <div id="div5">
           <label for="" id="label-rate">Como você avalia a Trybewarts?</label> 
@@ -80,7 +80,7 @@
         </div>
         <div id="7">
           <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
-          <input type="checkbox" name="" id="agreement">
+          <input type="checkbox" name="agree" id="agreement">
         </div>
         <button type="submit" id="submit-btn">Enviar</button>
       </form>
