todos os requisitos obrigatorios concluidos

--- a/index.html
+++ b/index.html
@@ -48,48 +48,75 @@
         </div>
         <div id="div3">
           <label for="" id="label-family">Qual sua família?</label>
-          <label for="Frontend"> <input type="radio" name="family" id="Frontend" value="Frontend"/> Familía Frontend </label>
-          <label for="Backend"> <input type="radio" name="family" id="Backend" value="Backend" /> Familía Backend </label>
-          <label for="FullStack"> <input type="radio" name="family" id="FullStack" value="FullStack" /> Familía FullStack </label>
+          <label for="Frontend">
+            <input type="radio" name="family" id="Frontend" value="Frontend" />
+            Familía Frontend
+          </label>
+          <label for="Backend">
+            <input type="radio" name="family" id="Backend" value="Backend" />
+            Familía Backend
+          </label>
+          <label for="FullStack">
+            <input
+              type="radio"
+              name="family"
+              id="FullStack"
+              value="FullStack"
+            />
+            Familía FullStack
+          </label>
         </div>
         <div id="div4">
-          <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
-          <input type="checkbox" name="" class="subject" value="HoFs"> HoFs
-          <input type="checkbox" name="" class="subject" value="Jest"> Jest
-          <input type="checkbox" name="" class="subject" value="Promises"> Promises
-          <input type="checkbox" name="" class="subject" value="React"> React
-          <input type="checkbox" name="" class="subject" value="SQL"> SQL
-          <input type="checkbox" name="" class="subject" value="Python"> Python
+          <label for="" id="label-content"
+            >Qual conteúdo você está com mais vontade de aprender?</label
+          >
+          <input type="checkbox" name="" class="subject" value="HoFs" /> HoFs
+          <input type="checkbox" name="" class="subject" value="Jest" /> Jest
+          <input type="checkbox" name="" class="subject" value="Promises" />
+          Promises
+          <input type="checkbox" name="" class="subject" value="React" /> React
+          <input type="checkbox" name="" class="subject" value="SQL" /> SQL
+          <input type="checkbox" name="" class="subject" value="Python" />
+          Python
         </div>
         <div id="div5">
-          <label for="" id="label-rate">Como você avalia a Trybewarts?</label> 
-          <input type="radio" name="rate" value="1">1
-          <input type="radio" name="rate" value="2">2
-          <input type="radio" name="rate" value="3">3
-          <input type="radio" name="rate" value="4">4
-          <input type="radio" name="rate" value="5">5
-          <input type="radio" name="rate" value="6">6
-          <input type="radio" name="rate" value="7">7
-          <input type="radio" name="rate" value="8">8
-          <input type="radio" name="rate" value="9">9
-          <input type="radio" name="rate" value="10">10
+          <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
+          <input type="radio" name="rate" value="1" />1
+          <input type="radio" name="rate" value="2" />2
+          <input type="radio" name="rate" value="3" />3
+          <input type="radio" name="rate" value="4" />4
+          <input type="radio" name="rate" value="5" />5
+          <input type="radio" name="rate" value="6" />6
+          <input type="radio" name="rate" value="7" />7
+          <input type="radio" name="rate" value="8" />8
+          <input type="radio" name="rate" value="9" />9
+          <input type="radio" name="rate" value="10" />10
         </div>
         <div id="div6">
           <label for="" class="textarea">Deixe seu comentário:</label>
-          <textarea name="" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+          <textarea
+            name=""
+            id="textarea"
+            cols="30"
+            rows="10"
+            maxlength="500"
+          ></textarea>
         </div>
         <div id="7">
-          <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
-          <input type="checkbox" name="agree" id="agreement">
+          <label for="" id="label-infos"
+            >Você concorda com o uso das informações acima?</label
+          >
+          <input type="checkbox" name="agree" id="agreement" />
         </div>
         <button type="submit" id="submit-btn">Enviar</button>
       </form>
       <img
-      src="images/trybewarts-colored.svg"
-      alt="trybe wards forms logo"
-      id="trybewarts-forms-logo"
+        src="images/trybewarts-colored.svg"
+        alt="trybe wards forms logo"
+        id="trybewarts-forms-logo"
       />
     </main>
+    <footer>Direitos reservados à Trybewarts©</footer>
   </body>
   <script src="script.js"></script>
 </html>
