--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             cols="30"
             rows="10"
             maxlength="500"
-          ></textarea>
+            ></textarea>
+          <div id="counter"></div>
         </div>
         <div id="7">
           <label for="" id="label-infos"
