--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             Familía Frontend
           </label>
           <label for="Backend">
-            <input type="radio" name="family" id="Backend" value="Backend" />
+            <input type="radio" name="family" id="Backend" value="Backend"/>
             Familía Backend
           </label>
           <label for="FullStack">
@@ -70,13 +70,13 @@
           <label for="" id="label-content"
             >Qual conteúdo você está com mais vontade de aprender?</label
           >
-          <input type="checkbox" name="" class="subject" value="HoFs" /> HoFs
-          <input type="checkbox" name="" class="subject" value="Jest" /> Jest
-          <input type="checkbox" name="" class="subject" value="Promises" />
+          <input type="checkbox" name="materias" class="subject" value="HoFs" /> HoFs
+          <input type="checkbox" name="materias" class="subject" value="Jest" /> Jest
+          <input type="checkbox" name="materias" class="subject" value="Promises" />
           Promises
-          <input type="checkbox" name="" class="subject" value="React" /> React
-          <input type="checkbox" name="" class="subject" value="SQL" /> SQL
-          <input type="checkbox" name="" class="subject" value="Python" />
+          <input type="checkbox" name="materias" class="subject" value="React" /> React
+          <input type="checkbox" name="materias" class="subject" value="SQL" /> SQL
+          <input type="checkbox" name="materias" class="subject" value="Python"/>
           Python
         </div>
         <div id="div5">
@@ -90,7 +90,7 @@
           <input type="radio" name="rate" value="7" />7
           <input type="radio" name="rate" value="8" />8
           <input type="radio" name="rate" value="9" />9
-          <input type="radio" name="rate" value="10" />10
+          <input type="radio" name="rate" value="10"/>10
         </div>
         <div id="div6">
           <label for="" class="textarea">Deixe seu comentário:</label>
@@ -111,12 +111,20 @@
         </div>
         <button type="submit" id="submit-btn">Enviar</button>
       </form>
+
+      <form id="form-data" class="hidden">
+        <div>
+        <h2>Bem Vindo a Trygowards</h2>
+        </div>
+      </form>
+
       <img
         src="images/trybewarts-colored.svg"
         alt="trybe wards forms logo"
         id="trybewarts-forms-logo"
       />
     </main>
+
     <footer>Direitos reservados à Trybewarts©</footer>
   </body>
   <script src="script.js"></script>
